@@ -312,6 +312,11 @@ specifier|final
 name|Directory
 name|cfsReader
 decl_stmt|;
+DECL|field|segment
+specifier|final
+name|String
+name|segment
+decl_stmt|;
 comment|/**     * fieldinfos for this core: means gen=-1.    * this is the exact fieldinfos these codec components saw at write.    * in the case of DV updates, SR may hold a newer version. */
 DECL|field|coreFieldInfos
 specifier|final
@@ -492,6 +497,14 @@ operator|=
 name|dir
 expr_stmt|;
 block|}
+name|segment
+operator|=
+name|si
+operator|.
+name|info
+operator|.
+name|name
+expr_stmt|;
 name|coreFieldInfos
 operator|=
 name|codec
@@ -937,6 +950,22 @@ argument_list|(
 name|listener
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|toString
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+literal|"SegmentCoreReader("
+operator|+
+name|segment
+operator|+
+literal|")"
+return|;
 block|}
 block|}
 end_class
