@@ -297,6 +297,18 @@ operator|.
 name|length
 argument_list|)
 expr_stmt|;
+name|stats
+operator|.
+name|add
+argument_list|(
+literal|"total_size"
+argument_list|,
+name|UninvertingReader
+operator|.
+name|getTotalSize
+argument_list|()
+argument_list|)
+expr_stmt|;
 for|for
 control|(
 name|int
@@ -341,6 +353,18 @@ argument_list|,
 name|UninvertingReader
 operator|.
 name|getUninvertedStatsSize
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|stats
+operator|.
+name|add
+argument_list|(
+literal|"total_size"
+argument_list|,
+name|UninvertingReader
+operator|.
+name|getTotalSize
 argument_list|()
 argument_list|)
 expr_stmt|;
