@@ -1239,7 +1239,7 @@ return|;
 block|}
 DECL|method|getValue
 specifier|public
-name|Object
+name|Accountable
 name|getValue
 parameter_list|()
 block|{
@@ -1291,32 +1291,35 @@ init|=
 operator|new
 name|StringBuilder
 argument_list|(
-literal|250
+literal|100
 argument_list|)
 decl_stmt|;
 name|b
 operator|.
 name|append
 argument_list|(
-literal|"'"
+literal|"segment='"
 argument_list|)
 operator|.
 name|append
 argument_list|(
 name|getReaderKey
 argument_list|()
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 operator|.
 name|append
 argument_list|(
-literal|"'=>"
+literal|"', "
 argument_list|)
 expr_stmt|;
 name|b
 operator|.
 name|append
 argument_list|(
-literal|"'"
+literal|"field='"
 argument_list|)
 operator|.
 name|append
@@ -1327,63 +1330,7 @@ argument_list|)
 operator|.
 name|append
 argument_list|(
-literal|"',"
-argument_list|)
-expr_stmt|;
-name|b
-operator|.
-name|append
-argument_list|(
-name|getCacheType
-argument_list|()
-argument_list|)
-operator|.
-name|append
-argument_list|(
-literal|","
-argument_list|)
-operator|.
-name|append
-argument_list|(
-name|getCustom
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|b
-operator|.
-name|append
-argument_list|(
-literal|"=>"
-argument_list|)
-operator|.
-name|append
-argument_list|(
-name|getValue
-argument_list|()
-operator|.
-name|getClass
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-argument_list|)
-operator|.
-name|append
-argument_list|(
-literal|"#"
-argument_list|)
-expr_stmt|;
-name|b
-operator|.
-name|append
-argument_list|(
-name|System
-operator|.
-name|identityHashCode
-argument_list|(
-name|getValue
-argument_list|()
-argument_list|)
+literal|"', "
 argument_list|)
 expr_stmt|;
 name|String
@@ -1396,17 +1343,12 @@ name|b
 operator|.
 name|append
 argument_list|(
-literal|" (size =~ "
+literal|"size =~ "
 argument_list|)
 operator|.
 name|append
 argument_list|(
 name|s
-argument_list|)
-operator|.
-name|append
-argument_list|(
-literal|')'
 argument_list|)
 expr_stmt|;
 return|return
