@@ -138,6 +138,20 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|Accountable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|MapOfSets
 import|;
 end_import
@@ -360,7 +374,7 @@ name|i
 index|]
 decl_stmt|;
 specifier|final
-name|Object
+name|Accountable
 name|val
 init|=
 name|item
