@@ -310,6 +310,20 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|RamUsageEstimator
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|uninverting
@@ -1539,6 +1553,69 @@ name|getCacheEntries
 argument_list|()
 operator|.
 name|length
+return|;
+block|}
+DECL|method|getTotalSize
+specifier|public
+specifier|static
+name|String
+name|getTotalSize
+parameter_list|()
+block|{
+name|CacheEntry
+index|[]
+name|entries
+init|=
+name|FieldCache
+operator|.
+name|DEFAULT
+operator|.
+name|getCacheEntries
+argument_list|()
+decl_stmt|;
+name|long
+name|totalBytesUsed
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|entries
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|totalBytesUsed
+operator|+=
+name|entries
+index|[
+name|i
+index|]
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|ramBytesUsed
+argument_list|()
+expr_stmt|;
+block|}
+return|return
+name|RamUsageEstimator
+operator|.
+name|humanReadableUnits
+argument_list|(
+name|totalBytesUsed
+argument_list|)
 return|;
 block|}
 block|}
